//
// Copyright (C) 2016 Bartosz Golaszewski <bartekgola@gmail.com>
//
// This program is free software; you can redistribute it and/or modify it
// under the terms of version 2.1 of the GNU Lesser General Public License
// as published by the Free Software Foundation.
//
// This program is distributed in the hope that it would be useful, but
// WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
//

syntax = "proto2";

message CastdCtlErrorResp {
	enum Code {
		ENOSUPP = 0;
		ENOMEM = 1;
		EPROTO = 2;
	}
	required Code code = 1;
}

message CastdCtlStatusResp {
	enum Value {
		OK = 0;
		DEFUNCT = 1;
	}
	required Value status = 1;
}

message CastdCtlAppResp {
	required string name = 1;
}

message CastdCtlRequest {
	enum Type {
		STATUS = 0;
		QUIT = 1;
		APP = 2;
	}
	required Type type = 1;
}

message CastdCtlResponse {
	enum Type {
		ERROR = -1;
		STATUS = 0;
		QUIT = 1;
		APP = 2;
	}
	required Type type = 1;

	oneof data {
		CastdCtlErrorResp error = 2;
		CastdCtlStatusResp status = 3;
		CastdCtlAppResp app = 4;
	}
}
